# my-novel-downloader

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
