[package]
name = "my-novel-downloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "*"}
scraper = "*"
encoding_rs = "*"
tl = "*"
